--- a/MRM/Views/TacticCampaign/TacticCampaign.cshtml
+++ b/MRM/Views/TacticCampaign/TacticCampaign.cshtml
@@ -28,14 +28,14 @@
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <label>Master Campaign</label><span class="text-danger">*</span><br />
-                                        @Html.DropDownListFor(m => m.MasterViewModels, new SelectList(Model.MasterViewModels, "Id", "Name"), "Select Option", new { @class = "chosen-single form-control" })
+                                        @*@Html.DropDownListFor(m => m.MasterViewModels, new SelectList(Model.MasterViewModels, "Id", "Name"), "Select Option", new { @class = "chosen-single form-control" })*@
                                         <div class="validmsgMastercampaign"></div>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <label>Sub Campaign</label><span class="text-danger">*</span><br />
-                                        @Html.DropDownListFor(m => m.ChildCampaignViewModels, new SelectList(Model.ChildCampaignViewModels, "Id", "Name"), "Select Option", new { @class = "chosen-single form-control" })
+                                        @Html.DropDownListFor(m => m.ChildCampaign_Id, new SelectList(Model.ChildCampaignViewModels, "Id", "Name",Model.ch), "Select Option", new { @class = "chosen-single form-control" })
                                         <div class="validmsgSubcampaign"></div>
                                     </div>
                                 </div>
@@ -159,7 +159,7 @@
                                         <div class="col-md-6">
                                             <div class="form-group">
                                                 <label>Vendor</label><span class="text-danger">*</span>
-                                               @Html.ListBoxFor(m => m.VendorViewModels, new MultiSelectList(Model.VendorViewModels, "Id", "Name"), new { @class = "chosen-select form-control" })
+                                               @*@Html.ListBoxFor(m => m.Vendor_Id, new MultiSelectList(Model.VendorViewModels, "Id", "Name"), new { @class = "chosen-select form-control" })*@
                                                 <div class="validmsgvendor"></div>
                                             </div>
                                         </div>
@@ -312,13 +312,57 @@
 
         });
 
-        $(document).on("change", "#BusinessGroups_Id", function (e) {
-            var BusinessGroups_Id = $(this).find(":selected").val();
-
-            if (BusinessGroups_Id != 0) {
-                window.location.href = '/ChildCampaign/ChildCampaign?id=' + BusinessGroups_Id + '&_=' + (new Date()).getTime();
-            }
+        $(document).on("change","#BusinessGroups_Id",function(){
+            DdlBind();
         });
+
+
+        $(document).on("change","#Segments_Id",function(){
+            DdlBind();
+        });
+
+        function DdlBind()
+        {
+        
+            var BusinessGroups_Id_ARR=[];
+            $('#BusinessGroups_Id :selected').each(function(i, selected){ 
+                BusinessGroups_Id_ARR.push($(selected).val());
+            });
+
+
+            var Segments_Id_ARR=[];
+            if($("#Segments_Id option:selected").val()=="")
+                Segments_Id= $("#Segments_Id option:selected").val();
+            else
+            {
+                $('#Segments_Id :selected').each(function(i, selected){ 
+                    Segments_Id_ARR.push($(selected).val());
+                });
+            }
+
+            var bgroup_params= '';
+            var Segment_params='';
+            
+            if (BusinessGroups_Id_ARR.length> 0 && Segments_Id_ARR.length<=0) {
+                BusinessGroups_Id_ARR.forEach(function(e){bgroup_params = bgroup_params+"BusinessGroups_Id="+e+"&";});
+                window.location.href = '/MasterCampaign/MasterCampaign?'+bgroup_params+Segment_params + '&_=' + (new Date()).getTime();
+            }
+            else if (BusinessGroups_Id_ARR.length> 0 && Segments_Id_ARR.length>0) {
+                BusinessGroups_Id_ARR.forEach(function(e){bgroup_params = bgroup_params+"BusinessGroups_Id="+e+"&";});
+                Segments_Id_ARR.forEach(function(e){Segment_params = Segment_params+"Segments_Id="+e+"&";});
+                window.location.href = '/MasterCampaign/MasterCampaign?'+bgroup_params+Segment_params + '&_=' + (new Date()).getTime();
+            }
+            else 
+            {
+                bgroup_params='';
+                Segment_params='';
+                window.location.href = '/MasterCampaign/MasterCampaign?'+bgroup_params+ Segment_params + '&_=' + (new Date()).getTime();
+                //handle for no selection
+            }
+        
+        }
+
+       
 
 
     });
