--- a/MRM/Views/ChildList/ChildList.cshtml
+++ b/MRM/Views/ChildList/ChildList.cshtml
@@ -52,7 +52,9 @@
                                     <td>@item.StartDate</td>
                                     <td>@item.EndDate</td>
                                     <td>
-                                        <input type="button" class="btn btn-block btn-danger btn-sm" value="Delete" onclick="location.href='@Url.Action( "MasterCampaign", "MasterCampaign")'" />
+                                        <input type="button" class="btn btn-block btn-danger btn-sm" value="Edit" onclick="location.href='@Url.Action( "ChildCampaign", "ChildCampaign", new { Id = item.Id })'" />
+                                        <input type="button" class="btn btn-block btn-danger btn-sm" value="View" onclick="location.href='@Url.Action( "MasterCampaign", "ChildCampaign", new { Id = item.Id })'" />
+                                        <input type="button" class="btn btn-block btn-danger btn-sm" value="Delete" onclick="location.href='@Url.Action( "MasterCampaign", "MasterCampaign", new { Id = item.Id })'" />
                                     </td>
                                 </tr>
                             </tbody>
