--- a/MRM/Views/ChildCampaign/ChildCampaign.cshtml
+++ b/MRM/Views/ChildCampaign/ChildCampaign.cshtml
@@ -25,7 +25,7 @@
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <label>Master Campaign</label><span class="text-danger">*</span>
-                                        @Html.DropDownListFor(m => m.MasterViewModels, new SelectList(Model.MasterViewModels, "Id", "Name"), "Select Option", new { @class = "form-control" })
+                                        @Html.DropDownListFor(m => m.MasterViewModels, new SelectList(Model.MasterViewModels, "Id", "Name", Model.Id), "Select Option", new { @class = "form-control" })
                                     </div>
                                 </div>
                                 <div class="col-md-6">
